# graph-linear

./: README.md  pyproject.toml
graphlinear/: __init__.py  _codegen.py  _commons.py  _irreps.py  _linear.py  _mixin.py
tests/: linear_test.py
